I did more refining with the h1 in the header and menu bar's sizing. Tweaking. I put a z-index of 1 on the fixed header. The type in the main banner now moves underneath the header.

--- a/css/main.css
+++ b/css/main.css
@@ -118,6 +118,7 @@ a {
     width: 100%;
     top: 0;
     left: 0;
+    z-index: 1;
 }
 
 .main-header h1 {
@@ -132,7 +133,7 @@ a {
   top: 1.2em;
   right: .625em;
   padding-right: .4em;
-  font-size: larger;
+  font-size: 1.5em;
 }
 
 .main-header .menu-btn {
@@ -163,6 +164,7 @@ a {
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
+  width: 100%;
 }
 
 .main-banner h2, 
